--- a/rate-limiter/skaffold.yaml
+++ b/rate-limiter/skaffold.yaml
@@ -4,11 +4,14 @@ metadata:
   name: rate-limiter
 build:
   artifacts:
-    - image: thanos
+    - image: checkout 
       ko:
-        main: ./thanos/cmd/thanos
+        main: ./checkout/cmd/checkout
 manifests:
   rawYaml:
+    #Checkout 
+    - deploy/checkout/deployment.yml
+    - deploy/checkout/service.yml
 
     # Thanos
     - deploy/thanos/deployment.yml
