package thanos and updated checkout deployment

--- a/rate-limiter/deploy/checkout/service.yml
+++ b/rate-limiter/deploy/checkout/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: thanos
+  name: checkout
 spec:
   selector:
-    app: thanos
+    app: checkout
   ports:
     - protocol: TCP
       port: 8080
-      targetPort: thanos
+      targetPort: checkout
   type: LoadBalancer
