deployed thanos as a sidecar container to the checkout service

--- a/rate-limiter/deploy/checkout/deployment.yml
+++ b/rate-limiter/deploy/checkout/deployment.yml
@@ -20,5 +20,5 @@ spec:
       - name: thanos
         image: thanos
         ports:
-        - containerPort: 8080
-          name: checkout
+        - containerPort: 8081
+          name: thanos
