--- a/rate-limiter/deploy/checkout/service.yml
+++ b/rate-limiter/deploy/checkout/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: checkout
+  name: thanos
 spec:
   selector:
     app: checkout
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: checkout
+      port: 8081
+      targetPort: thanos
   type: LoadBalancer
