--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
   "rust-analyzer.linkedProjects": [
-    "rate-limiter/thanos/Cargo.toml"
-  ]
+    "rate-limiter/thanos/Cargo.toml",
+    "rate-limiter/leakybucket/Cargo.toml"
+  ],
+  "rust-analyzer.server.path": "rust-analyzer",
+  "rust-analyzer.inlayHints.typeHints.enable": false,
+  "rust-analyzer.inlayHints.renderColons": false,
+  "rust-analyzer.inlayHints.parameterHints.enable": false,
+  "rust-analyzer.inlayHints.closureStyle": "hide",
+  "rust-analyzer.inlayHints.closingBraceHints.enable": false,
+  "rust-analyzer.inlayHints.chainingHints.enable": false
 }
