--- a/rate-limiter/deploy/redis/configmap.yml
+++ b/rate-limiter/deploy/redis/configmap.yml
@@ -1,15 +1,45 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: redis-config
+  name: redis-cluster
 data:
-  redis.conf: |-
+  redis.conf:  |+
     cluster-enabled yes
-    cluster-require-full-coverage no
     cluster-node-timeout 15000
     cluster-config-file /data/nodes.conf
-    cluster-migration-barrier 1
     appendonly yes
     protected-mode no
-    bind 0.0.0.0
+    dir /data
     port 6379
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: redis-probes
+data:
+  readiness.sh: |-
+    #!/bin/sh
+
+    pingResponse="$(redis-cli -h localhost ping)"
+    if [ "$?" -eq "124" ]; then
+      echo "PING timed out"
+      exit 1
+    fi
+
+    if [ "$pingResponse" != "PONG"]; then
+      echo "$pingResponse"
+      exit 1
+    fi
+  liveness.sh: |-
+    #!/bin/sh
+
+    pingResponse="$(redis-cli -h localhost ping | head -n1 | awk '{print $1;}')"
+    if [ "$?" -eq "124" ]; then
+      echo "PING timed out"
+      exit 1
+    fi
+
+    if [ "$pingResponse" != "PONG"] && [ "$pingResponse" != "LOADING" ] && [ "$pingResponse" != "MASTERDOWN" ]; then
+      echo "$pingResponse"
+      exit 1
+    fi
