--- a/rate-limiter/deploy/redis/service.yml
+++ b/rate-limiter/deploy/redis/service.yml
@@ -14,3 +14,52 @@ spec:
     appCluster: redis-cluster
   sessionAffinity: None
   type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis
+spec:
+  clusterIP: None
+  ports:
+  - name: redis-port
+    port: 6379
+    protocol: TCP
+    targetPort: 6379
+  selector:
+    app: redis
+    appCluster: redis-cluster
+    statefulset.kubernetes.io/pod-name: redis-0
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-1
+spec:
+  clusterIP: None
+  ports:
+  - name: redis-port
+    port: 6379
+    protocol: TCP
+    targetPort: 6379
+  selector:
+    app: redis
+    appCluster: redis-cluster
+    statefulset.kubernetes.io/pod-name: redis-1
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-2
+spec:
+  clusterIP: None
+  ports:
+  - name: redis-port
+    port: 6379
+    protocol: TCP
+    targetPort: 6379
+  selector:
+    app: redis
+    appCluster: redis-cluster
+    statefulset.kubernetes.io/pod-name: redis-2
+  type: ClusterIP
