--- a/rate-limiter/deploy/thanos/service.yml
+++ b/rate-limiter/deploy/thanos/service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: checkout
+  name: thanos
 spec:
   selector:
-    app: checkout
+    app: thanos
   ports:
     - protocol: TCP
       port: 8081
-      targetPort: checkout
+      targetPort: thanos
   type: LoadBalancer
