--- a/rate-limiter/deploy/checkout/deployment.yml
+++ b/rate-limiter/deploy/checkout/deployment.yml
@@ -17,3 +17,7 @@ spec:
       containers:
       - name: checkout
         image: checkout
+        ports:
+        - name: checkout
+          containerPort: 3000
+          protocol: TCP
